--- a/Css/general.css
+++ b/Css/general.css
@@ -1,73 +1,116 @@
-/*Css document*/ 
+@charset "utf-8";
 
-/* 
+/*
+shorthand:
 
-Css is structured as follows:
+Margin: 40px; all 4 sides 
+margin: 40px auto; top/bottom  right/left
+margin: 40px auto 0; top right/left bottom
+margin: 40px 30px 5px 10px; top right bottom left 
 
-Selector {
-    Property: value;
-    Property: value;
-    Property: value;
-}
+start at the top and then continue clockwize around the box.
 
-Each selector is paired with in styles and elemnet for example
+units of measurement: 
 
-html {} is paired with and styles <html> 
-
+ width =  % 
+height = rem 
+type = rem
+graphics = pixels ( e.g. a border would be a graphic )
 */ 
 
+
+@-moz-viewport { width: device-width; scale: 1; }/* firefox */
+@-ms-viewport { width: device-width; scale: 1; } /* Internet explorer */
+@-o-viewport { width: device-width; scale: 1; } /* opera */
+@-webkit-viewport { width: device-width; scale: 1; } /* safari and chrome */ 
+@viewport { width: device-width; scale: 1; } /* w3c standerd */
+
+/* adjust paddign so it draws on the box interier */
+* {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    /* controls the zoom of the type on moble */ 
+    
+	-moz-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	text-size-adjust: 100%;
+    
+    /* to control the type size on moble and desktop */ 
+    
+    font-size: 100%; /* 100 % = 16px = 1 rem */
+    font-family: Georgia, Times, serif;
+}
+
+img {
+	width: 100%; /* images are responsive */ 
+    display: block;
 }
 
 body { 
-    background-color:#CCC;
+    margin: 0;
+    padding: 0;
 }
 
-h1 { 
-    font-family: Georgia, "Times New Roman", serif;
-    font-weight: normal;
-    font-size: 3rem; /* 1 rem = 16 px */
+.masthead {
+    background: maroon;
+    overflow:hidden;
 }
 
-h2 {
-    color: #f00;
+.logo {
+    height: 4.5rem;
+    width:auto;
+    margin:.5rem 5%;
+    /* float:right; */
+    margin: .5rem auto;
 }
 
-p,li {
-    font-size: 1rem;
-    line-height: 1.5rem
+article {
+    margin:0;
+    padding:0 5%;
+    overflow:hidden;
 }
 
-h1 + p { 
-    font-size: 1.5rem;
-    line-height: 1.75rem;
+h1 {
+    font-size: 5rem;
+    margin: 1.5rem 0;
+    line-height:4.5rem;
+}
+h1+p { 
+    font-size:1.25rem;
+    font-weight:bold;
 }
 
-strong { 
-    font-weight: bold;
+p { 
+    line-height: 1.5rem;
+    margin: 0 0 1.5rem;
 }
 
-p strong {
-    color: #39f;
+figure {
+    margin: 0 auto 1.5rem; /* AUTO in case we want smaller */
+    width: 100%; /* size can be smaller than bu not larger than 100 % */
 }
 
-em {
-    font-style:italic;
+figcaption {
+    font-size: .75rem;
+    margin: .5rem 0 0;
 }
 
-ul,ol {
-    background-color: #fff;
-}
-    
-li {
-    color: #f00;
+footer {
+    background-color: brown;
+    overflow:hidden;
 }
 
-ol li:first-child {
-    background-color: #000;
+footer p {
+    font-size: .75rem;
+    margin: .5rem 5% 5rem;
+    color: white;
 }
 
-ol li:last-child {
-    background-color: #f90
-}    
+footer a {
+    color: white;
+}
